fix: overflow 효과주기

--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -1,5 +1,5 @@
 .main {
-  // overflow: hidden;
+  overflow: hidden;
 
   .product-container {
     display: flex;
